# replyai

backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7c07e87da08f_initial_schema_users_user_settings_.py  9ea464b64d0c_fix_typo_on_replies_table_column_.py  abde98ae44a3_add_refresh_tokens_table.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  reply.py  user.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: refresh_tokens.py  replies.py  user_settings.py  users.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  plans.py  refresh_tokens.py  replies.py  user.py  user_settings.py  users.py
backend/app/schemas/: auth.py  exceptions.py  reply.py  user.py
backend/app/utils/: prompts.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(user)/: layout.tsx
frontend/app/(user)/dashboard/: page.tsx
frontend/app/(user)/history/: page.tsx
frontend/app/(user)/settings/: page.tsx
frontend/components/: features.tsx  hero.tsx  homenav.tsx  navbar.tsx  pageTransition.tsx
