[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "authlib>=1.7.2",
    "fastapi>=0.139.0",
    "google-genai>=2.11.0",
    "greenlet>=3.5.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=2.45.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.13.0",
    "sqlalchemy>=2.0.51",
    "starlette>=1.3.1",
    "uvicorn>=0.51.0",
]
